# mine-rs

./: .gitignore  Cargo.toml  README.md
assets/textures/: debug_ground.aseprite  debug_square.aseprite
obsidian-vault/mine-rs/.obsidian/: workspace.json
obsidian-vault/mine-rs/Roadmap/: Kanban.md
resources/the_cube/: the_cube.mtl
src/: main.rs  player.rs  setup.rs  update.rs
