[package]
name = "mine-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
log = { version = "0.4.20", features = ["serde"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
